--- a/blujay/angular.json
+++ b/blujay/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
+              "src/blujay.PNG",
               "src/assets"
             ],
             "styles": [
