--- a/blujay/package.json
+++ b/blujay/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "apollo-angular": "^1.9.1",
+    "apollo-angular-link-http": "^1.10.0",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
     "bulma": "^0.9.0",
+    "graphql": "^15.1.0",
+    "graphql-tag": "^2.10.3",
     "npm": "^6.14.5",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
