--- a/blujay/package.json
+++ b/blujay/package.json
@@ -27,6 +27,7 @@
     "bulma": "^0.9.0",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
+    "ngx-audio-player": "^10.0.0",
     "npm": "^6.14.5",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
