--- a/blujay/package.json
+++ b/blujay/package.json
@@ -11,45 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.2",
-    "@angular/common": "~10.0.2",
-    "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
-    "@angular/forms": "~10.0.2",
-    "@angular/platform-browser": "~10.0.2",
-    "@angular/platform-browser-dynamic": "~10.0.2",
-    "@angular/router": "~10.0.2",
-    "apollo-angular": "^1.9.1",
-    "apollo-angular-link-http": "^1.10.0",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
+    "@angular/animations": "~10.0.9",
+    "@angular/common": "~10.0.9",
+    "@angular/compiler": "~10.0.9",
+    "@angular/core": "~10.0.9",
+    "@angular/forms": "~10.0.9",
+    "@angular/platform-browser": "~10.0.9",
+    "@angular/platform-browser-dynamic": "~10.0.9",
+    "@angular/router": "~10.0.9",
+    "apollo-angular": "^2.0.3",
     "bulma": "^0.9.0",
-    "graphql": "^15.1.0",
-    "graphql-tag": "^2.10.3",
+    "graphql": "^15.0.0",
     "ngx-audio-player": "^10.0.0",
-    "npm": "^6.14.5",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "npm": "^6.14.7",
+    "rxjs": "~6.6.2",
+    "tslib": "^2.0.1",
+    "zone.js": "~0.10.2",
+    "@apollo/client": "^3.0.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^8.2.0",
-    "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "^10.0.1",
-    "@angular/compiler-cli": "~10.0.2",
-    "@angular/language-service": "~10.0.2",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^24.9.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.9.6"
+    "@angular-builders/jest": "^10.0.0",
+    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "~10.0.9",
+    "@angular/language-service": "~10.0.9",
+    "@types/jasmine": "~3.5.12",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.0.27",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "jest": "^26.4.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.3",
+    "typescript": "~3.9.7"
   }
 }
