--- a/blujay/package.json
+++ b/blujay/package.json
@@ -12,13 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.9",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "@apollo/client": "^3.0.0",
     "apollo-angular": "^2.0.3",
     "bulma": "^0.9.0",
     "graphql": "^15.0.0",
@@ -26,8 +29,7 @@
     "npm": "^6.14.7",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.1",
-    "zone.js": "~0.10.2",
-    "@apollo/client": "^3.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/jest": "^10.0.0",
