--- a/blujay/package.json
+++ b/blujay/package.json
@@ -28,12 +28,13 @@
     "ngx-audio-player": "^10.0.0",
     "npm": "^6.14.7",
     "rxjs": "~6.6.2",
+    "stripe-angular": "^1.2.1",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/jest": "^10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.6",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular/cli": "^10.0.6",
     "@angular/compiler-cli": "~10.0.9",
     "@angular/language-service": "~10.0.9",
