--- a/blujay/package.json
+++ b/blujay/package.json
@@ -17,11 +17,11 @@
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
-    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
     "@apollo/client": "^3.0.0",
+    "@vime/angular": "^4.7.3",
     "apollo-angular": "^2.0.3",
     "bulma": "^0.9.0",
     "graphql": "^15.0.0",
