--- a/blujay/package.json
+++ b/blujay/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
     "@apollo/client": "^3.0.0",
+    "@creativebulma/bulma-badge": "^1.0.1",
     "@vime/angular": "^4.7.3",
     "apollo-angular": "^2.0.3",
     "bulma": "^0.9.0",
