added library to set up intent

--- a/blujay/package.json
+++ b/blujay/package.json
@@ -22,13 +22,15 @@
     "@angular/router": "~10.0.9",
     "@apollo/client": "^3.0.0",
     "@creativebulma/bulma-badge": "^1.0.1",
+    "@stripe/stripe-js": "^1.11.0",
+    "@types/stripe-v3": "^3.1.22",
     "@vime/angular": "^4.7.3",
     "apollo-angular": "^2.0.3",
     "bulma": "^0.9.0",
     "graphql": "^15.0.0",
+    "ngx-stripe": "^10.1.2",
     "npm": "^6.14.7",
     "rxjs": "~6.6.2",
-    "stripe-angular": "^1.2.1",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.2"
   },
