--- a/blujay/package.json
+++ b/blujay/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl --ssl-key localhost.key  --ssl-cert localhost.crt",
+    "start": "ng serve --ssl --ssl-key C:\\Repos\\blujay\\blujay\\localhost.key  --ssl-cert C:\\Repos\\blujay\\blujay\\localhost.crt",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
