add build-prod script

--- a/blujay/package.json
+++ b/blujay/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --ssl --ssl-key C:\\Repos\\blujay\\blujay\\localhost.key  --ssl-cert C:\\Repos\\blujay\\blujay\\localhost.crt",
     "build": "ng build",
+    "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
