--- a/blujay_api_payments/payment-service/package.json
+++ b/blujay_api_payments/payment-service/package.json
@@ -36,6 +36,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/stripe": "^8.0.417",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
