--- a/blujay_api/.env
+++ b/blujay_api/.env
@@ -1,9 +1,9 @@
 WEBSITE_URL="https://localhost:4200"
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=mysecretpassword
-POSTGRES_DATABASE=my_database
+POSTGRES_PASSWORD=postgres
+POSTGRES_DATABASE=blujay_api_dev
 PORT=3000
 MODE=DEV
 RUN_MIGRATIONS=true
